# matrix-sled-migration-tool

./: .gitignore  Dockerfile  MIGRATION_STEPS.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
rust-key-extractor/: Cargo.toml
rust-key-extractor/src/: main.rs
scripts/: 01-backup-store.sh  02-extract-keys.sh
src/: config.ts  index.ts
src/commands/: delete-device.ts  enable-backup.ts  extract-backup-key.ts  generate-key.ts  upload-keys.ts  verify-backup.ts
src/utils/: matrix-api.ts  ssss.ts
